--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "vite": "^5.3.1"
   },
   "dependencies": {
+    "gsap": "^3.12.5",
     "locomotive-scroll": "^4.1.4",
     "tailwind-scrollbar": "^3.1.0"
   }
