--- a/vercel.json
+++ b/vercel.json
@@ -2,8 +2,8 @@
   "redirects": [
     {
       "source": "/(.*)",
-      "destination": "https://thisisbooluw.website/:path*",
-      "statusCode": 302
+      "destination": "https://thisisbooluw.website/$1",
+      "permanent": true
     }
   ]
 }
